modified:   dist/app.js 	modified:   dist/app.js.map 	modified:   header.html 	modified:   pgp.txt 	modified:   prestyles.css 	modified:   styles1.css 	modified:   styles2.css

--- a/header.html
+++ b/header.html
@@ -5,4 +5,7 @@
 <a href="https://profile.indeed.com/p/stevenb-lc4hdfs">View Resume</a>
 <a href="https://github.com/sacred-G">GitHub</a>
 <a href="https://my-portfolio.sbouldin.com">Portfolio</a>
+<a href="https://my-portfolio.sbouldin.com/#about">About Me</a>
+<a href="https://my-portfolio.sbouldin.com/#projects">Projects</a>
+
 </span>
