modified:   app.js 	modified:   dist/app.js 	modified:   dist/app.js.map 	modified:   header.html 	renamed:    pgp.txt -> iframe.txt 	modified:   index.html 	modified:   styles0.css 	modified:   styles2.css 	modified:   styles3.css 	modified:   work.txt

--- a/header.html
+++ b/header.html
@@ -2,10 +2,10 @@
 <a href="#" id="skip-animation">Skip Animation --></a>
 <span style="float:right">
 <a href="https://www.linkedin.com/in/steven-bouldin/">LinkedIn</a>
-<a href="https://profile.indeed.com/p/stevenb-lc4hdfs">View Resume</a>
+<a href="https://i.ibb.co/fpkM727/Steven-Bouldin-July2024.jpg">View Resume</a>
 <a href="https://github.com/sacred-G">GitHub</a>
 <a href="https://my-portfolio.sbouldin.com">Portfolio</a>
 <a href="https://my-portfolio.sbouldin.com/#about">About Me</a>
-<a href="https://my-portfolio.sbouldin.com/#projects">Projects</a>
+<a href="https://github.com/Sacred-G/interactive-coding">Source Code</a>
 
 </span>
