--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <link rel="icon" type="image/png" sizes="96x96" href="/ico/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/ico/favicon-16x16.png">
     <link rel="shortcut icon" href="/ico/favicon.ico" type="image/x-icon" />
+        <!-- Open Graph Meta Tags -->
+        <meta property="og:title" content="Live-Coding Resume">
+        <meta property="og:description" content="JavaScript application creates an interactive, animated portfolio presentation that combines live coding with resume content.">
+        <meta property="og:image" content="https://i.imgur.com/OMsAokr.png">
+        <meta property="og:url" content="https://interactive-coding.vercel.app">
+        <meta property="og:type" content="website">
+    
+        <!-- Twitter Card Tags (for Twitter) -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@bouldinsteven4">
+        <meta name="twitter:title" content="Live-Coding Resume">
+        <meta name="twitter:description" content="JavaScript application creates an interactive, animated portfolio presentation that combines live coding with resume content.">
+        <meta name="twitter:image" content="https://i.imgur.com/OMsAokr.png">
  </head>
  
 <!-- Google tag (gtag.js) -->
@@ -25,7 +38,7 @@
     <div id="content">
       <pre contenteditable id="style-text"></pre>
       <pre id="work-text"></pre>
-      <pre id="pgp-text"></pre>
+      <pre id="iframe-text"></pre>
     </div>
     <div id="header"></div>
    
